feat: add eraser button to MakeDrawingFragment

--- a/app/src/main/res/layout/fragment_draw_avatar.xml
+++ b/app/src/main/res/layout/fragment_draw_avatar.xml
@@ -12,84 +12,97 @@
     </data>
 
     <FrameLayout
+        android:id="@+id/screen_draw_avatar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/screen_draw_avatar">
-    <!--ACHTERGROND-->
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/draw_emotion"
-        android:contentDescription="@string/tekenen" />
+        android:orientation="vertical">
+        <!--ACHTERGROND-->
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/draw_emotion"
+            android:contentDescription="@string/tekenen" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00000000">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#00000000">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_draw_utilities_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.05" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guide_draw_utilities_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.05" />
 
-        <include
-            android:id="@+id/container_draw_utilities"
-            layout="@layout/panel_drawing_tools"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/guide_drawView_drawTools_bottom"
-            app:layout_constraintEnd_toEndOf="@+id/guide_drawView_drawTools_left"
-            app:layout_constraintStart_toStartOf="@+id/guide_drawView_drawUtilities_left"
-            app:layout_constraintTop_toTopOf="@+id/guide_drawView_drawTools_top"
-            bind:drawViewModel="@{drawViewModel}" />
+            <include
+                android:id="@+id/container_draw_colors"
+                layout="@layout/panel_drawing_colors"
+                android:layout_width="0dp"
+                app:layout_constraintVertical_weight="0.75"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@id/container_draw_utilities"
+                app:layout_constraintEnd_toEndOf="@+id/guide_drawView_drawTools_left"
+                app:layout_constraintStart_toStartOf="@+id/guide_drawView_drawUtilities_left"
+                app:layout_constraintTop_toTopOf="@+id/guide_drawView_drawTools_top"
+                bind:drawViewModel="@{drawViewModel}" />
 
-        <com.divyanshu.draw.widget.DrawView
-            android:id="@+id/drawView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/guide_drawView_drawTools_bottom"
-            app:layout_constraintEnd_toEndOf="@+id/guide_drawView_drawTools_right"
-            app:layout_constraintStart_toEndOf="@+id/guide_drawView_drawTools_left"
-            app:layout_constraintTop_toTopOf="@+id/guide_drawView_drawTools_top" />
+            <include
+                android:id="@+id/container_draw_utilities"
+                layout="@layout/panel_drawing_tools"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@+id/guide_drawView_drawTools_bottom"
+                app:layout_constraintEnd_toEndOf="@+id/guide_drawView_drawTools_left"
+                app:layout_constraintVertical_weight="0.25"
+                app:layout_constraintStart_toStartOf="@+id/guide_drawView_drawUtilities_left"
+                app:layout_constraintTop_toBottomOf="@id/container_draw_colors"
+                bind:drawViewModel="@{drawViewModel}" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_drawView_drawUtilities_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.05" />
+            <com.divyanshu.draw.widget.DrawView
+                android:id="@+id/drawView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@+id/guide_drawView_drawTools_bottom"
+                app:layout_constraintEnd_toEndOf="@+id/guide_drawView_drawTools_right"
+                app:layout_constraintStart_toEndOf="@+id/guide_drawView_drawTools_left"
+                app:layout_constraintTop_toTopOf="@+id/guide_drawView_drawTools_top" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_drawView_drawTools_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.18" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guide_drawView_drawUtilities_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.05" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_drawView_drawTools_right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.95" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guide_drawView_drawTools_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.18" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_drawView_drawTools_bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.94" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guide_drawView_drawTools_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.95" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_drawView_drawTools_top"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.04" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guide_drawView_drawTools_bottom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.94" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guide_drawView_drawTools_top"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.04" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
