--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/tools"
->
+    xmlns:bind="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="drawViewModel"
             type="be.hogent.faith.faith.emotionCapture.drawing.DrawViewModel" />
+
+        <import type="android.graphics.Color" />
 
     </data>
 
@@ -39,13 +40,36 @@
                 app:layout_constraintGuide_percent="0.05" />
 
             <include
+                android:id="@+id/container_draw_colors"
+                layout="@layout/panel_drawing_colors"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/btn_draw_setColorWhite"
+                app:layout_constraintStart_toStartOf="@+id/guide_draw_utilities_left"
+                app:layout_constraintTop_toTopOf="@+id/guide_draw_drawview_top"
+                app:layout_constraintVertical_weight="0.65"
+                bind:drawViewModel="@{drawViewModel}" />
+
+            <Button
+                android:id="@+id/btn_draw_setColorWhite"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:onClick="@{()->drawViewModel.onEraserClicked()}"
+                android:text="Gom"
+                app:layout_constraintBottom_toTopOf="@+id/container_draw_utilities"
+                app:layout_constraintStart_toStartOf="@+id/guide_draw_utilities_left"
+                app:layout_constraintTop_toBottomOf="@+id/container_draw_colors"
+                app:layout_constraintVertical_weight="0.1" />
+
+            <include
                 android:id="@+id/container_draw_utilities"
                 layout="@layout/panel_drawing_tools"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="@+id/guide_draw_drawview_bottom"
+                app:layout_constraintBottom_toTopOf="@+id/guide_draw_drawview_bottom"
                 app:layout_constraintStart_toStartOf="@+id/guide_draw_utilities_left"
-                app:layout_constraintTop_toTopOf="@+id/guide_draw_drawview_top"
+                app:layout_constraintTop_toBottomOf="@+id/btn_draw_setColorWhite"
+                app:layout_constraintVertical_weight="0.25"
                 bind:drawViewModel="@{drawViewModel}" />
 
 
@@ -61,10 +85,10 @@
 
 
             <Button
+                android:id="@+id/btn_makeDrawing_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:id="@+id/btn_makeDrawing_save"
                 android:layout_margin="8dp"
                 android:onClick="@{() -> drawViewModel.onSaveButtonClicked()}"
                 android:text="@string/save"
