[layout] Add save button to park and to draw

--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -86,16 +86,16 @@
 
             <Button
                 android:id="@+id/btn_makeDrawing_save"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="48dip"
+                android:layout_height="@dimen/material_icon_height"
                 android:layout_gravity="center"
                 android:layout_margin="8dp"
-                android:layout_marginBottom="88dp"
+                android:background="@drawable/save_btn"
                 android:onClick="@{() -> drawViewModel.onSaveButtonClicked()}"
-                android:text="@string/save"
-                app:layout_constraintBottom_toBottomOf="@+id/guide_draw_drawview_bottom"
-                app:layout_constraintStart_toEndOf="@+id/container_draw_utilities"
-                app:layout_constraintStart_toStartOf="@+id/drawView" />
+                app:layout_constraintBottom_toTopOf="@+id/container_draw_images"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/container_draw_images"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <include
                 android:id="@+id/container_draw_images"
@@ -119,7 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.04" />
+                app:layout_constraintGuide_percent="0.11" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_draw_drawview_bottom"
