--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -90,6 +90,8 @@
                 android:layout_height="@dimen/material_icon_height"
                 android:layout_gravity="center"
                 android:layout_margin="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
                 android:background="@drawable/save_btn"
                 android:onClick="@{() -> drawViewModel.onSaveButtonClicked()}"
                 app:layout_constraintBottom_toTopOf="@+id/container_draw_images"
