--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -86,17 +86,14 @@
 
             <Button
                 android:id="@+id/btn_makeDrawing_save"
-                android:layout_width="48dip"
+                android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
                 android:layout_gravity="center"
-                android:layout_margin="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/save_btn"
                 android:onClick="@{() -> drawViewModel.onSaveButtonClicked()}"
-                app:layout_constraintBottom_toTopOf="@+id/container_draw_images"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/container_draw_images"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <include
