--- a/app/src/main/res/layout/event_list_content.xml
+++ b/app/src/main/res/layout/event_list_content.xml
@@ -33,7 +33,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
             android:text="@string/ex_title"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#DE000000"
             app:layout_constraintBottom_toTopOf="@+id/sub_text"
             app:layout_constraintEnd_toEndOf="parent"
