[feat] Add recyclerview data to overview events

--- a/app/src/main/res/layout-w600dp-land/event_list.xml
+++ b/app/src/main/res/layout-w600dp-land/event_list.xml
@@ -19,7 +19,7 @@
     -->
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/event_list"
+        android:id="@+id/rv_eventlist"
         android:name="be.hogent.faith.faith.library.EventListFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
