--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -135,6 +136,20 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent="0.79" />
+
+            <TextView
+                android:id="@+id/lbl_recordAudio_recordingTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:text="@{String.valueOf(audioViewModel.recordingTimeString)}"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:visibility="@{audioViewModel.recordingTimeVisibility}"
+                app:layout_constraintEnd_toEndOf="@+id/btn_recordAudio_record"
+                app:layout_constraintStart_toStartOf="@+id/btn_recordAudio_pause"
+                app:layout_constraintTop_toTopOf="@+id/guide_recordAudio_bottom"
+                tools:text="0:00" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
