fix: color of all lines changes when switching colors

--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -44,43 +44,51 @@
                 layout="@layout/panel_drawing_colors"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                app:layout_constraintBottom_toTopOf="@+id/btn_draw_text"
-                app:layout_constraintStart_toStartOf="@+id/guide_draw_utilities_left"
-                app:layout_constraintTop_toTopOf="@+id/guide_draw_drawview_top"
-                app:layout_constraintVertical_weight="0.6"
+                app:layout_constraintBottom_toTopOf="@+id/container_tools"
+                app:layout_constraintTop_toTopOf="@id/guide_draw_drawview_top"
+                app:layout_constraintStart_toStartOf="@id/guide_draw_utilities_left"
                 bind:drawViewModel="@{drawViewModel}" />
 
-            <Button
-                android:id="@+id/btn_draw_text"
+            <LinearLayout
+                android:id="@+id/container_tools"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:onClick="@{()->drawViewModel.onTextClicked()}"
-                android:text="Text"
-                app:layout_constraintBottom_toTopOf="@+id/btn_draw_eraser"
-                app:layout_constraintVertical_weight="0.1"
-                app:layout_constraintStart_toStartOf="@+id/guide_draw_utilities_left"
-                app:layout_constraintTop_toBottomOf="@+id/container_draw_colors" />
-
-            <Button
-                android:id="@+id/btn_draw_eraser"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:onClick="@{()->drawViewModel.onEraserClicked()}"
-                android:text="Gom"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
                 app:layout_constraintBottom_toTopOf="@+id/container_draw_utilities"
-                app:layout_constraintVertical_weight="0.1"
-                app:layout_constraintStart_toStartOf="@+id/guide_draw_utilities_left"
-                app:layout_constraintTop_toBottomOf="@+id/btn_draw_text" />
+                app:layout_constraintStart_toStartOf="@+id/container_draw_colors"
+                app:layout_constraintTop_toBottomOf="@+id/container_draw_colors">
+
+                <Button
+                    android:id="@+id/btn_draw_pencil"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{()->drawViewModel.onPencilClicked()}"
+                    android:text="Penseel" />
+
+                <Button
+                    android:id="@+id/btn_draw_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{()->drawViewModel.onTextClicked()}"
+                    android:text="Text" />
+
+
+                <Button
+                    android:id="@+id/btn_draw_eraser"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{()->drawViewModel.onEraserClicked()}"
+                    android:text="Gom" />
+            </LinearLayout>
 
             <include
                 android:id="@+id/container_draw_utilities"
                 layout="@layout/panel_drawing_tools"
                 android:layout_width="wrap_content"
-                app:layout_constraintVertical_weight="0.2"
-                android:layout_height="0dp"
+                android:layout_height="238dp"
                 app:layout_constraintBottom_toTopOf="@+id/guide_draw_drawview_bottom"
-                app:layout_constraintStart_toStartOf="@+id/guide_draw_utilities_left"
-                app:layout_constraintTop_toBottomOf="@+id/btn_draw_eraser"
+                app:layout_constraintStart_toStartOf="@+id/container_tools"
+                app:layout_constraintTop_toBottomOf="@+id/container_tools"
                 bind:drawViewModel="@{drawViewModel}" />
 
 
