--- a/app/src/main/res/layout/fragment_draw_tabs.xml
+++ b/app/src/main/res/layout/fragment_draw_tabs.xml
@@ -129,8 +129,8 @@
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 app:layout_constraintBottom_toBottomOf="@+id/drawView"
-                app:layout_constraintEnd_toEndOf="@+id/recyclerView"
-                app:layout_constraintStart_toStartOf="@+id/recyclerView">
+                app:layout_constraintEnd_toEndOf="@+id/recyclerView_drawing_templates"
+                app:layout_constraintStart_toStartOf="@+id/recyclerView_drawing_templates">
 
                 <com.google.android.material.tabs.TabItem
                     android:id="@+id/tab_drawing_people"
@@ -151,7 +151,7 @@
                     android:text="Decors" />
 
                 <com.google.android.material.tabs.TabItem
-                    android:id="@+id/tab_drawing_metaphores"
+                    android:id="@+id/tab_drawing_metaphors"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Metaforen" />
