--- a/app/src/main/res/layout/arrow_to_right.xml
+++ b/app/src/main/res/layout/arrow_to_right.xml
@@ -20,14 +20,15 @@
 
     <ImageView
         android:id="@+id/img_arrow_right"
-        android:contentDescription="@string/description_arrow_right"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_margin="5dp"
+        android:contentDescription="@string/description_arrow_right"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toStartOf="@+id/txt_arrow_right"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline6" />
+        app:layout_constraintTop_toTopOf="@+id/guideline6"
+        app:srcCompat="@drawable/icoon_stad" />
 
     <TextView
         android:id="@+id/txt_arrow_right"
@@ -49,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.774359" />
+        app:layout_constraintGuide_percent="0.7" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
