--- a/app/src/main/res/layout/fragment_enter_event_details.xml
+++ b/app/src/main/res/layout/fragment_enter_event_details.xml
@@ -93,9 +93,10 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.15" />
 
-            <be.hogent.faith.faith.views.RightArrow
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_event_details_text"
                 android:layout_width="wrap_content"
+                style="@style/arrow_style.toRight"
                 android:layout_height="100dp"
                 android:layout_marginStart="24dp"
                 android:background="@android:color/transparent"
@@ -107,25 +108,23 @@
                 app:layout_constraintTop_toTopOf="@+id/guide_middle_horizontal_pole"
                 app:text="@string/description_addText" />
 
-            <be.hogent.faith.faith.views.LeftArrow
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_event_details_camera"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:layout_marginEnd="24dp"
-                android:background="@android:color/transparent"
                 android:contentDescription="@string/description_addPhoto"
                 android:onClick="@{() -> eventViewModel.onCameraButtonClicked()}"
                 app:image="@drawable/icoon_stad"
                 app:layout_constraintBottom_toTopOf="@+id/guide_bottom_pole"
                 app:layout_constraintEnd_toStartOf="@+id/guide_middle_vertical_pole"
                 app:layout_constraintTop_toTopOf="@+id/guide_middle_horizontal_pole"
+                style="@style/arrow_style.toLeft"
                 app:text="@string/description_addPhoto" />
 
-            <be.hogent.faith.faith.views.LeftArrow
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_event_details_audio"
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
                 android:layout_marginEnd="24dp"
+                style="@style/arrow_style.toLeft"
                 android:contentDescription="@string/description_addAudio"
                 android:onClick="@{() -> eventViewModel.onAudioButtonClicked()}"
                 app:image="@drawable/icoon_stad"
@@ -135,9 +134,10 @@
                 app:layout_constraintVertical_bias="0.0"
                 app:text="@string/description_addAudio" />
 
-            <be.hogent.faith.faith.views.RightArrow
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_event_details_drawing"
                 android:layout_width="wrap_content"
+                style="@style/arrow_style.toRight"
                 android:layout_height="100dp"
                 android:layout_marginStart="24dp"
                 android:contentDescription="@string/description_addDrawing"
