--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <data>
@@ -23,9 +22,9 @@
             android:id="@+id/background_welcome"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/login_background"
             android:contentDescription="@string/descr_loginscreen"
-            android:scaleType="centerInside"
-            tools:src="@drawable/loginscherm" />
+            android:scaleType="centerInside" />
 
         <!-- KNOPPEN -->
         <!-- Invisible to make it transparent -->
@@ -50,130 +49,140 @@
                 android:layout_width="1dp"
                 android:layout_height="1dp"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.76" />
+                app:layout_constraintGuide_percent="0.82" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_pole_top"
                 android:layout_width="1dp"
                 android:layout_height="1dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.33" />
+                app:layout_constraintGuide_percent="0.58" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_pole_right_end"
                 android:layout_width="1dp"
                 android:layout_height="1dp"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.95" />
+                app:layout_constraintGuide_percent="0.98" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_form_start"
                 android:layout_width="1dp"
                 android:layout_height="1dp"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.28" />
+                app:layout_constraintGuide_percent="0.36" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_form_end"
                 android:layout_width="1dp"
                 android:layout_height="1dp"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.425" />
+                app:layout_constraintGuide_percent="0.5" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guide_pole_bottom"
-                android:layout_width="1dp"
-                android:layout_height="1dp"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.42" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guide_password_bottom"
-                android:layout_width="1dp"
-                android:layout_height="1dp"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.51" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guide_userName"
-                android:layout_width="1dp"
-                android:layout_height="1dp"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.42" />
-
-            <View
-                android:id="@+id/btn_archive"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_register"
+                style="@style/arrow_style.toRight"
                 android:onClick="@{() -> welcomeViewModel.registerButtonClicked()}"
-                app:layout_constraintBottom_toTopOf="@id/guide_pole_bottom"
-                app:layout_constraintEnd_toStartOf="@id/guide_pole_right_end"
-                app:layout_constraintStart_toStartOf="@+id/guide_pole_right_start"
+                android:text="@string/msg_registreer"
+                app:icon="@drawable/icoon_stad"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/guideline7"
                 app:layout_constraintTop_toTopOf="@+id/guide_pole_top" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guide_pole_left_end"
-                android:layout_width="1dp"
-                android:layout_height="1dp"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.55" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guide_pole_left_start"
-                android:layout_width="0dp"
-                android:layout_height="12dp"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.73" />
-
-            <View
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_city_startNewEvent"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:background="#00000000"
+                style="@style/arrow_style.toLeft"
                 android:onClick="@{() -> welcomeViewModel.loginButtonClicked()}"
-                app:layout_constraintBottom_toTopOf="@+id/guide_pole_bottom"
-                app:layout_constraintEnd_toStartOf="@id/guide_pole_left_start"
-                app:layout_constraintStart_toStartOf="@+id/guide_pole_left_end"
-                app:layout_constraintTop_toTopOf="@+id/guide_pole_top" />
+                android:text="@string/msg_naar_de_stad"
+                app:icon="@drawable/icoon_stad"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayout_username"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/username"
+                app:layout_constraintBottom_toTopOf="@+id/textInputLayout_pwd"
+                app:layout_constraintEnd_toStartOf="@+id/guide_form_end"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/guide_form_end"
+                app:layout_constraintTop_toTopOf="@+id/guide_pole_top">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txt_welcome_userName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_login_wrap"
+                    android:text="@={welcomeViewModel.userName}" />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-            <Button
-                android:id="@+id/btn_createUserAndGotoCity"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayout_pwd"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/password"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guide_form_end"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/guide_form_end"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_username">
+
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txt_welcome_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_lock_wrap"
+                    android:inputType="textPassword"
+                    android:text="@={welcomeViewModel.password}"
+                    app:layout_constraintBottom_toTopOf="@+id/guide_password_bottom"
+                    app:layout_constraintEnd_toStartOf="@+id/guide_form_end"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="@+id/guide_form_start" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="200dp"
+                android:layout_height="0dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guide_pole_right_start"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/guide_pole_right_start"
+                app:layout_constraintTop_toTopOf="@+id/guide_pole_top"
+                app:layout_constraintVertical_bias="0.9"
+                app:srcCompat="@drawable/paal" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="959dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="1060dp" />
+
+            <ImageView
+                android:id="@+id/imageView3"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="#00000000"
-                android:onClick="@{() -> welcomeViewModel.gotoCityButtonClicked()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guide_form_start"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guide_userName" />
-
-
-            <EditText
-                android:id="@+id/txt_welcome_userName"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="#00000000"
-                android:hint="@string/username"
-                android:inputType="textPersonName"
-                android:text="@={welcomeViewModel.userName}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                app:layout_constraintBottom_toTopOf="@+id/guide_userName"
-                app:layout_constraintEnd_toStartOf="@+id/guide_form_end"
-                app:layout_constraintStart_toStartOf="@+id/guide_form_start" />
-
-            <EditText
-                android:id="@+id/txt_welcome_password"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="#00000000"
-                android:hint="@string/password"
-                android:inputType="textPassword"
-                android:text="@={welcomeViewModel.password}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                app:layout_constraintBottom_toTopOf="@+id/guide_password_bottom"
-                app:layout_constraintEnd_toStartOf="@+id/guide_form_end"
-                app:layout_constraintStart_toStartOf="@+id/guide_form_start" />
+                app:layout_constraintTop_toTopOf="@+id/guide_pole_top"
+                app:srcCompat="@drawable/login_avatars" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
