--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,29 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryVariant">@color/primary_variant</item>
+        <item name="colorOnPrimary">@color/onPrimary</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorSecondaryVariant">@color/secondary_variant</item>
+        <item name="colorOnSecondary">@color/onSecondary</item>
+        <item name="colorError">@color/error</item>
+        <item name="colorOnError">@color/onError</item>
+        <item name="colorSurface">@color/surface</item>
+        <item name="colorOnSurface">@color/onSurface</item>
+        <item name="android:colorBackground">@color/background</item>
+        <item name="colorOnBackground">@color/onBackground</item>
     </style>
 
-    <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme.FullScreen">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="Dialog.NearlyFullScreen" parent="@style/Theme.AppCompat.Light.Dialog">
+    <style name="Dialog.NearlyFullScreen" parent="@style/Theme.MaterialComponents.Dialog">
         <item name="android:windowMinWidthMajor">90%</item>
         <item name="android:windowMinWidthMinor">90%</item>
     </style>
@@ -25,9 +33,50 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="Theme.MaterialComponents.Light.DarkActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="Theme.MaterialComponents.Light" />
+
+    <style name="arrow_style.toLeft" parent="Widget.MaterialComponents.Button.Icon">
+        <item name="android:layout_width">@dimen/arrow_width</item>
+        <item name="android:layout_height">@dimen/arrow_height</item>
+        <item name="android:textColor">@color/color_black</item>
+        <item name="android:backgroundTint">@color/color_white</item>
+        <item name="iconTint">@null</item>
+        <item name="iconGravity">end</item>
+        <item name="shapeAppearanceOverlay">@style/arrow_button_to_left</item>
+    </style>
+
+    <style name="arrow_style.toRight" parent="arrow_style.toLeft">
+        <item name="android:layout_width">@dimen/arrow_width</item>
+        <item name="android:layout_height">@dimen/arrow_height</item>
+        <item name="android:textColor">@color/color_black</item>
+        <item name="iconGravity">start</item>
+        <item name="android:backgroundTint">@color/color_white</item>
+        <item name="shapeAppearanceOverlay">@style/arrow_button_to_right</item>
+    </style>
+
+    <style name="arrow_button_to_right" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopLeft">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
+
+        <item name="cornerFamilyTopRight">cut</item>
+        <item name="cornerFamilyBottomRight">cut</item>
+        <item name="cornerSizeTopRight">37dp</item>
+        <item name="cornerSizeBottomRight">37dp</item>
+    </style>
+
+    <style name="arrow_button_to_left" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopLeft">37dp</item>
+        <item name="cornerSizeBottomLeft">37dp</item>
+
+        <item name="cornerFamilyTopLeft">cut</item>
+        <item name="cornerFamilyBottomLeft">cut</item>
+        <item name="cornerSizeTopRight">0dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
+    </style>
 
 
 </resources>
